// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatePicker iOS renders correctly 1`] = `<Styled(View) />`;

exports[`DatePicker iOS renders correctly 2`] = `
<Styled(View)>
  <View>
    <doneButton>
      <Styled(Text)>
        Done
      </Styled(Text)>
    </doneButton>
    <DatePickerIOS
      date={1996-01-01T05:00:00.000Z}
      mode="date"
    />
  </View>
</Styled(View)>
`;

exports[`DatePicker iOS renders correctly 3`] = `
<Styled(View)>
  <View>
    <doneButton>
      <Styled(Text)>
        Done
      </Styled(Text)>
    </doneButton>
    <DatePickerIOS
      date={1996-01-01T05:00:00.000Z}
      mode="datetime"
    />
  </View>
</Styled(View)>
`;

exports[`DatePicker iOS renders correctly 4`] = `
<Styled(View)>
  <View>
    <doneButton>
      <Styled(Text)>
        Done
      </Styled(Text)>
    </doneButton>
    <DatePickerIOS
      date={1996-01-01T05:00:00.000Z}
      mode="time"
    />
  </View>
</Styled(View)>
`;
